# consult-viewer

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
concept/: serialloopbacktest.py
consult_viewer/: dockutils.py  dockwidgets.py  mainview.py  options.py  parametertable.py  serialloopbacktest.py  statuslog.py  utility.py
consult_viewer/consult_interface/: __init__.py  definition.py  params.py  serial.py  utils.py
consult_viewer/consult_interface/src/: definition.py  params.py  serial.py  utils.py
consult_viewer/consult_interface/test/: test_utils.py
docker/: .config  Dockerfile  build  start
docs/: links.txt
src/: consultmodel.py  mainview.py  params.csv
test/: interface_utils.py
