[tool.poetry]
name = "consult-viewer"
version = "0.1.0"
description = ""
authors = ["Rob L <solarisin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
PySide6 = "^6.7.2"
PySide6-QtAds = "^4.3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
