[tool.poetry]
name = "consult-viewer"
version = "0.1.0"
description = ""
authors = ["Rob Longbottom <robert.longbottom@3db-labs.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10, <3.13"
PySide6 = "^6.7.2"
PySide6-QtAds = "^4.3.0.2"
pyserial = "^3.5"
timer = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
